ChangeLogTag: Tue May 31 12:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.{h,cpp,i}:
          Load the PolicyFactory Registry when needed

        * tao/PI_Client/PolicyFactory_Registry.h:
          Added svc conf macros

        * tao/PI_Client/PI_Client.{h,cpp}:
          New files with static initializer for static builds.

          The PolicyFactory_Registry is now loaded on demand when needed from the
          PI_Client library. In a static build the end user must include
          tao/PI_Client/PI_Client.h to pre load the PI stuff.

ChangeLogTag: Tue May 31 11:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Client/PolicyFactory_Registry.{h,cpp}:
          New files, must be worked more on this but this will be the
          concrete implementation

        * tao/PolicyFactory_Registry.{h,cpp}:
          Removed these files, they moved to the PI_Client lib

        * tao/tao.mpc:
          Removed PolicyFactory_Registry.{h,cpp}

        * tao/PortableServer/Default_Policy_Validator.cpp:
        * tao/ORBInitInfo.cpp:
        * tao/ORB_Core.{h,cpp,i}:
          Use the new PolicyFactory_Registry adapter

        * tao/PI_Client.mpc:
          New MPC file for PI_Client

        * tao/PI_Server.mpc:
          New MPC file for PI_Server

        * tao/PI_Client/pi_client_export.h:
          New export file for PI_Client library

        * tao/PI_Server/pi_server_export.h:
          New export file for PI_Server library

        * tao/tao.mpc:
          Added new PolicyFactory_Registry_Adapter.h file.

        * tao/ORB_Core.cpp:
          Include new PolicyFactory_Registry_Adapter.h

        * tao/PolicyFactory_Registry_Adapter.h:
          New Adapter