@@ -1,3 +1,10 @@
+
+        * tao/ORBInitInfo.pidl:
+          Include Policy_Forward.pidl instead of Policy.pidl
+
+        * tao/ORBInitInfoC.h:
+          Regenerated
+
 ChangeLogTag: Tue May 31 12:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/ORB_Core.{h,cpp,i}:
